[workspace]
members = [
    "pifm-f0",
    "totsugeki"
]
resolver = "2"

[workspace.dependencies]
flipperzero = "0.5"
flipperzero-alloc = "0.5"
flipperzero-sys = "0.5"

[workspace.package]
authors = ["Treelar"]

[profile.dev]
opt-level = "z"
panic = "abort"

[profile.release]
opt-level = "z"
panic = "abort"