[package]
name = "pifm-f0"
version = "0.1.0"
edition = "2021"

autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "pifm-f0"
bench = false
test = false

[dependencies]
flipperzero = {workspace = true}
flipperzero-sys = {workspace = true}
flipperzero-alloc = {workspace = true}
flipperzero-rt = "0.5"
totsugeki = { path = "../totsugeki", version = "*" }

itoa = "1.0"
arrform = "0.1.1"

embedded-graphics = "0.7.1"
embedded-layout = "0.2.0"
tinybmp = "0.4.0"

statig = "0.2.0-beta.0"

[build-dependencies]
prost-build = "0.11.4"
anyhow = "1.0.68"