cargo-features = ["per-package-target"]

[package]
name = "totsugeki"
version = "0.1.0"
edition = "2021"
forced-target = "thumbv7em-none-eabihf"

description = "Safe Rust for Flipper Zero"

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true

[dependencies]
flipperzero = {workspace = true}
flipperzero-sys = {workspace = true}
flipperzero-alloc = {workspace = true}

embedded-graphics = {version = "0.7.1", optional = true}


[lib]
bench = false
test = false